--- a/style.css
+++ b/style.css
@@ -47,3 +47,21 @@ main {
     color: rgb(255, 0, 0);
     text-transform: capitalize;
 }
+.form {
+    position: absolute;
+    width: 65%;
+    top: 65%;
+    left: 13.5%;
+}
+
+.input_search {
+    width: 100%;
+    padding: 4%;
+    outline: none;
+    border: 2px solid red;
+    border-radius: 25px;
+    font-weight: 600;
+    color: blueviolet;
+    font-size: clamp(8px,5vw,24px);
+    box-shadow: -3px 4px 0 #888;
+}
