--- a/style.css
+++ b/style.css
@@ -65,3 +65,22 @@ main {
     font-size: clamp(8px,5vw,24px);
     box-shadow: -3px 4px 0 #888;
 }
+
+.buttons{
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    width: 65%;
+    transform: translate(-57%,0);
+    display: flex;
+    gap: 20px;
+}
+
+.button{
+    width: 50%;
+    padding: 5%;
+    border: 2px solid black;
+    border-radius: 25px;
+    font-size: clamp(8px,5vw,24px);
+    box-shadow: -3px 4px 0 #888;
+}
